# Spacexplorer

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
space_game_thingy/: project.txt  space.py
src/: project.txt  space.py
src/spacexplorer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
